--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"fazcblocksmp.aternos.me",
-	"port": "27275",
+	"ip":"Skyblockcambodue.aternos.me",
+	"port": "63555",
 	"name": "BOTMC",
 	"auto-night-skip":"false"
 }
